<resources>
    <string name="app_name">TrabFinal2022ProgAvanc</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="Torneio">Torneio de Futsal</string>
    <string name="Team">Team</string>
    <string name="Coach">Coach</string>
    <string name="Player">Player</string>
    <string name="Login">Login</string>
    <string name="Inserir">Inserir</string>
    <string name="title_activity_main_activity3_team">MainActivity3Team</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="Settings">Settings</string>
    <string name="Eliminar">Eliminar</string>
    <string name="Alterar">Alterar</string>
    <string name="title_activity_main_activity4_team">MainActivity4Team</string>
    <string name="Register">Register</string>
    <string name="title_activity_main_activity5_player">Player</string>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="Read">Read</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_main4">MainActivity4</string>
    <string name="Name">Name</string>
    <string name="Locality">Locality</string>
    <string name="Numberofplayers">Number of players</string>
    <string name="Create">Create</string>
    <string name="title_activity_main5">MainActivity5</string>
    <string name="BirthDate">Birth Date</string>
    <string name="NumberPhone">Number Phone</string>
    <string name="SweaterNumber">Sweater Number</string>
    <string name="FutsalTournament">Futsal Tournament</string>
    <string name="UserName">User Name</string>
    <string name="Password">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Save">Save</string>
    <string name="Cancel">Cancel</string>
    <string name="Savee">Save</string>
    <string name="TeamName">Team Name</string>
    <string name="LocalityName">Locality Name</string>
    <string name="DeleteEquipa">Delete Equipa</string>
    <string name="TeammName">Team \'s Name</string>
    <string name="DeleteLocality">Delete Locality</string>
</resources>