<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    tools:context=".MainActivity2">


    <Button
        android:id="@+id/button_Equipa"
        android:layout_width="175dp"
        android:layout_height="190dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="52dp"
        android:adjustViewBounds="true"
        android:drawableTop="@drawable/player"
        android:text="@string/Player"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/button_Treinador"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#AAAAAA"
        app:strokeWidth="1dp"/>

    <Button
        android:id="@+id/button_Treinador"
        android:layout_width="175dp"
        android:layout_height="190dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:drawableTop="@drawable/coach"
        android:scaleType="fitEnd"
        android:text="@string/Coach"
        android:textColor="#000000"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#AAAAAA"
        app:strokeWidth="1dp"/>

    <Button
        android:id="@+id/button_Jogador"
        android:layout_width="175dp"
        android:layout_height="190dp"
        android:layout_marginTop="16dp"
        android:drawableTop="@drawable/team"
        android:scaleType="fitEnd"
        android:text="@string/Team"
        android:textColor="#000000"
        android:textStyle="bold"
        app:backgroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Treinador"
        app:strokeColor="#AAAAAA"
        app:strokeWidth="1dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>